--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Farah Bouchman:fullstack web developer"/>
+    <meta name="description" content="Farah Bouchman:developer"/>
     <title> web portfolio: farah bouchman</title>
+    <link rel="shortcut icon" href="images/fari.jpg"/>
 </head>
 <body>
     <a href="index.html">farah bouchman</a>
