--- a/index.html
+++ b/index.html
@@ -4,38 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Farah Bouchman:developer"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
     <title> web portfolio: farah bouchman</title>
     <link rel="shortcut icon" href="images/fari.jpg"/>
 </head>
 <body>
-    <a href="index.html">farah bouchman</a>
+    <nav>
+
+        <a href="index.html">farah bouchman</a>
         <a href="about.html">About</a>
         <a href="blog.html">blog</a>
         <a href="contact.html">contact</a>
-        <a href="projects.html">projects</a>
+        <a href="project.html">projects</a>
         <a href="services.html">services</a>
-<p>
-    <img src="./images/fari.jpg"alt="farah bouchman image"
-    width="300" height="300" />
-</p>
-    <h1> am farah...</h1>
+    </nav>
+  <main>
 
-    <p>am farah an upcoming developer</p>
-<ul>
-    <li><a href="https://facebook.com/Farah Ahmed" target="_blank">Facebook</a></li>
-    <li><a href="https://twitter.com/FaraHBouchman" target="_blank">Twitter</a></li>
-    <li><a href="https://github.com/farah310" target="_blank">Github</a></li>
-</ul>
-<pre>
-In understanding be men
-</pre>
-<P>
-    <blockquote>
-        Be humble
-    </blockquote>
-    <q> Stay focus</q>
-    </P>
-    <p> &copy;2021.All Right Reserved.&trade; Farah Bouchman</p>
+      <p>
+          <img src="/images/fari.jpg"alt="farah bouchman image"
+          width="300" height="300" />
+        </p>
+        <h1> am farah...</h1>
+        
+        <p>am farah an upcoming developer</p>
+    </main>      
+    <footer>
 
-</body>`
+        <ul>
+            <li><a href="https://facebook.com/Farah Ahmed" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/FaraHBouchman" target="_blank">Twitter</a></li>
+            <li><a href="https://github.com/farah310" target="_blank">Github</a></li>
+        </ul>
+        <pre>
+            In understanding be men
+        </pre>
+        <P>
+            <blockquote>
+                Be humble
+            </blockquote>
+            <q> Stay focus</q>
+        </P>
+        <p> &copy;2021.All Right Reserved.&trade; Farah Bouchman</p>
+        
+    </footer>
+    </body>`
 </html>
